Update AuthorizationFilter.java